--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@material-ui/icons": "^3.0.1",
     "@types/file-saver": "^1.3.0",
     "@types/jszip": "^3.1.4",
-    "@types/react": "*",
+    "@types/react": "^16.4.14",
     "@types/react-dom": "*",
     "file-saver": "^1.3.8",
     "github-buttons": "git+https://github.com/ntkme/github-buttons.git",
@@ -22,7 +22,7 @@
     "lodash.startcase": "^4.4.0",
     "lodash.uniqueid": "^4.0.1",
     "mobx": "^5.1.0",
-    "mobx-react": "^5.2.6",
+    "mobx-react": "^5.2.8",
     "phaser": "^3.12.0",
     "react": "latest",
     "react-color": "^2.14.1",
@@ -30,7 +30,7 @@
     "react-scripts-ts": "latest"
   },
   "devDependencies": {
-    "@types/jest": "*",
+    "@types/jest": "^23.3.2",
     "@types/lodash": "^4.14.116",
     "@types/node": "^10.9.4",
     "gh-pages": "^1.2.0",
