--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
+    "@types/base64-arraybuffer": "^0.1.0",
     "@types/file-saver": "^1.3.1",
     "@types/jszip": "^3.1.4",
     "@types/react": "^16.4.16",
@@ -14,6 +15,7 @@
     "file-saver": "^1.3.8",
     "github-buttons": "git+https://github.com/ntkme/github-buttons.git",
     "jszip": "^3.1.5",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
     "lodash.isplainobject": "^4.0.6",
